--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -7,21 +7,21 @@ spec:
   clusterNetwork:
     pods:
       cidrBlocks:
-      - 192.168.0.0/16
+      - 100.96.0.0/11 # pod CIDR for the cluster
     serviceDomain: k8s.test
     services:
       cidrBlocks:
-      - 10.96.0.0/12
+      - 100.64.0.0/13 # service CIDR for the cluster
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
     kind: KubeadmControlPlane
-    name: capi-control-plane
-    namespace: default
+    name: capi-control-plane # name of the KubeadmControlPlane object associated with the cluster.
+    namespace: default # kubernetes namespace in which the KubeadmControlPlane object reside. Should be the same namespace as that of the Cluster object
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
     kind: VCDCluster
-    name: capi-cluster
-    namespace: default
+    name: capi-cluster # name of the VCDCluster object associated with the cluster.
+    namespace: default # kubernetes namespace in which the VCDCluster object resides. Should be the same namespace as that of the Cluster object
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDCluster
@@ -29,14 +29,14 @@ metadata:
   name: capi-cluster
   namespace: default
 spec:
-  site: https://bos1-vcloud-static-170-210.eng.vmware.com
-  org: test_org
-  ovdc: test_orgvdc
-  ovdcNetwork: test_orgvdc_net
+  site: https://vcd.vmware.com # VCD endpoint with the format https://VCD_HOST. No trailing '/'
+  org: test_org # VCD organization name where the cluster should be deployed
+  ovdc: test_orgvdc # VCD virtual datacenter name where the cluster should be deployed
+  ovdcNetwork: test_orgvdc_net # VCD virtual datacenter network to be used by the cluster
   userContext:
-    username: user_admin
-    password: vmware
-    refreshToken: ""
+    username: username # username of the VCD persona creating the cluster
+    password: vmware # password associated with the user creating the cluster
+    refreshToken: "" # refresh token of the client registered with VCD for creating clusters. username and password can be left blank if refresh token is provided
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
@@ -46,9 +46,9 @@ metadata:
 spec:
   template:
     spec:
-      catalog: cse-cat
-      template: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652
-      computePolicy: 2core2gb
+      catalog: tkgm-cat # Catalog hosting the TKGm template, which will be used to deploy the control plane VMs
+      template: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652 # Name of the template to be used to create (or) upgrade the control plane nodes
+      computePolicy: tkgm-compute-policy # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter). If no sizing policy should be used, use "".
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
 kind: KubeadmControlPlane
@@ -66,17 +66,17 @@ spec:
         extraArgs:
           enable-hostpath-provisioner: "true"
       dns:
-        imageRepository: projects.registry.vmware.com/tkg
-        imageTag: v1.7.0-vmware.12
+        imageRepository: projects.registry.vmware.com/tkg # image repository to pull the DNS image from
+        imageTag: v1.7.0-vmware.12 # DNS image tag associated with the TKGm OVA used. The values must be retrieved from the TKGm ova BOM. Refer to the github documentation for more details
       etcd:
         local:
-          imageRepository: projects.registry.vmware.com/tkg
-          imageTag: v3.4.13-vmware.14
-      imageRepository: projects.registry.vmware.com/tkg
+          imageRepository: projects.registry.vmware.com/tkg # image repository to pull the etcd image from
+          imageTag: v3.4.13-vmware.14 # etcd image tag associated with the TKGm OVA used. The values must be retrieved from the TKGm ova BOM. Refer to the github documentation for more details
+      imageRepository: projects.registry.vmware.com/tkg # image repository to use for the rest of kubernetes images
     users:
     - name: root
       sshAuthorizedKeys:
-      - "ssh-key"
+      - "ssh-key" # ssh public key to log in to the control plane VMs in VCD
     initConfiguration:
       nodeRegistration:
         criSocket: /run/containerd/containerd.sock
@@ -93,10 +93,10 @@ spec:
     infrastructureRef:
       apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
       kind: VCDMachineTemplate
-      name: capi-control-plane
-      namespace: default
-  replicas: 1
-  version: v1.20.8-vmware.1
+      name: capi-control-plane # name of the VCDMachineTemplate object used to deploy control plane VMs. Should be the same name as that of KubeadmControlPlane object
+      namespace: default # kubernetes namespace of the VCDMachineTemplate object. Should be the same namespace as that of the Cluster object
+  replicas: 1 # desired number of control plane nodes for the cluster
+  version: v1.20.8-vmware.1 # Kubernetes version to be used to create (or) upgrade the control plane nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
@@ -106,9 +106,9 @@ metadata:
 spec:
   template:
     spec:
-      catalog: cse-cat
-      template: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652
-      computePolicy: ""
+      catalog: tkgm-cat # Catalog hosting the TKGm template, which will be used to deploy the worker VMs
+      template: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652 # Name of the template to be used to create (or) upgrade the worker nodes
+      computePolicy: tkgm-compute-policy # Sizing policy to be used for the worker VMs (this must be pre-published on the chosen organization virtual datacenter). If no sizing policy should be used, use "".
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1alpha4
 kind: KubeadmConfigTemplate
@@ -121,7 +121,7 @@ spec:
       users:
       - name: root
         sshAuthorizedKeys:
-        - "ssh-key"
+        - "ssh-key" # ssh public key to log in to the worker VMs in VCD
       joinConfiguration:
         nodeRegistration:
           criSocket: /run/containerd/containerd.sock
@@ -135,8 +135,8 @@ metadata:
   name: capi-md0
   namespace: default
 spec:
-  clusterName: capi-cluster
-  replicas: 1
+  clusterName: capi-cluster # name of the Cluster object
+  replicas: 1 # desired number of worker nodes for the cluster
   selector:
     matchLabels: null
   template:
@@ -145,12 +145,12 @@ spec:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1alpha4
           kind: KubeadmConfigTemplate
-          name: capi-md0
-          namespace: default
-      clusterName: capi-cluster
+          name: capi-md0 # name of the KubeadmConfigTemplate object
+          namespace: default # kubernetes namespace of the KubeadmConfigTemplate object. Should be the same namespace as that of the Cluster object
+      clusterName: capi-cluster # name of the Cluster object
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
         kind: VCDMachineTemplate
-        name: capi-md0
-        namespace: default
-      version: v1.20.8-vmware.1
+        name: capi-md0 # name of the VCDMachineTemplate object used to deploy worker nodes
+        namespace: default # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
+      version: v1.20.8-vmware.1 # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
