--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -67,11 +67,11 @@ spec:
           enable-hostpath-provisioner: "true"
       dns:
         imageRepository: projects.registry.vmware.com/tkg # image repository to pull the DNS image from
-        imageTag: v1.7.0-vmware.12 # DNS image tag associated with the TKGm OVA used. The values must be retrieved from the TKGm ova BOM. Refer to the github documentation for more details
+        imageTag: v1.7.0_vmware.12 # DNS image tag associated with the TKGm OVA used. The values must be retrieved from the TKGm ova BOM. Refer to the github documentation for more details
       etcd:
         local:
           imageRepository: projects.registry.vmware.com/tkg # image repository to pull the etcd image from
-          imageTag: v3.4.13-vmware.14 # etcd image tag associated with the TKGm OVA used. The values must be retrieved from the TKGm ova BOM. Refer to the github documentation for more details
+          imageTag: v3.4.13_vmware.14 # etcd image tag associated with the TKGm OVA used. The values must be retrieved from the TKGm ova BOM. Refer to the github documentation for more details
       imageRepository: projects.registry.vmware.com/tkg # image repository to use for the rest of kubernetes images
     users:
     - name: root
@@ -96,7 +96,7 @@ spec:
       name: capi-control-plane # name of the VCDMachineTemplate object used to deploy control plane VMs. Should be the same name as that of KubeadmControlPlane object
       namespace: default # kubernetes namespace of the VCDMachineTemplate object. Should be the same namespace as that of the Cluster object
   replicas: 1 # desired number of control plane nodes for the cluster
-  version: v1.20.8-vmware.1 # Kubernetes version to be used to create (or) upgrade the control plane nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
+  version: v1.20.8+vmware.1 # Kubernetes version to be used to create (or) upgrade the control plane nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: VCDMachineTemplate
@@ -153,4 +153,4 @@ spec:
         kind: VCDMachineTemplate
         name: capi-md0 # name of the VCDMachineTemplate object used to deploy worker nodes
         namespace: default # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
-      version: v1.20.8-vmware.1 # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
+      version: v1.20.8+vmware.1 # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
