--- a/controllers/cluster_scripts/cloud_init_control_plane.yaml
+++ b/controllers/cluster_scripts/cloud_init_control_plane.yaml
@@ -25,9 +25,16 @@ write_files:
        echo "$error_message" &>> /var/log/capvcd/customization/error.log
        vmtoolsd --cmd "info-set guestinfo.post_customization_script_execution_failure_reason $error_message"
        vmtoolsd --cmd "info-set guestinfo.post_customization_script_execution_status $retval"
+
+       cloud_init_output=""
+       if [[ -f /var/log/cloud-init-output.log ]]
+       then
+         cloud_init_output=$(</var/log/cloud-init-output.log)
+       fi
+       vmtoolsd --cmd "info-set guestinfo.post_customization_cloud_init_output $cloud_init_output"
     }
     mkdir -p /var/log/capvcd/customization
-    trap 'catch $? $LINENO' ERR
+    trap 'catch $? $LINENO' ERR EXIT
     set -ex
     echo "$(date) Post Customization script execution in progress" &>> /var/log/capvcd/customization/status.log
     vcloud_basic_auth_path=/root/vcloud-basic-auth.yaml
@@ -56,6 +63,11 @@ write_files:
         ctr -n=k8s.io image tag $image_ref $ref_path:$new_tag_version
       done
       __JINJA_RUNCMD_REPLACE_ME__
+      if [[ ! -f /run/cluster-api/bootstrap-success.complete ]]
+      then
+          echo "file /run/cluster-api/bootstrap-success.complete not found" &>> /var/log/capvcd/customization/error.log
+          exit 1
+      fi
       export KUBECONFIG=/etc/kubernetes/admin.conf
       kubectl get po -A -owide
     vmtoolsd --cmd "info-set guestinfo.kubeconfig $(cat /etc/kubernetes/admin.conf | base64 | tr -d '\n')"
