--- a/controllers/cluster_scripts/cloud_init_node.yaml
+++ b/controllers/cluster_scripts/cloud_init_node.yaml
@@ -52,6 +52,7 @@ write_files:
     echo "$(date) post customization script execution completed" &>> /var/log/capvcd/customization/status.log
     exit 0
 runcmd:
+- '[ ! -f /root/node.sh ] && cloud-init clean && sudo reboot'
 - bash /root/node.sh
 timezone: UTC
 disable_root: false
