--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -7,7 +7,7 @@ generatorOptions:
 secretGenerator:
   - name: vcloud-basic-auth
     literals:
-      - username=USER # VCD username to initialize the CAPVCD
+      - username=USER # VCD username to initialize the CAPVCD. If system administrator is the user, please use 'system/administrator' as the username.
       - password=PASSWORD # Password
 
 configMapGenerator:
