--- a/infrastructure-vcd/v1.0.0/clusterctl.yaml
+++ b/infrastructure-vcd/v1.0.0/clusterctl.yaml
@@ -43,6 +43,7 @@ VCD_STORAGE_PROFILE: "*"
 K8S_DEFAULT_STORAGE_CLASS_NAME: "cloud-director-default"
 USE_DELETE_RECLAIM_POLICY: true
 FILE_SYSTEM: "ext4"
+IP_SUBNET: "10.89.159.253/19"
 
 SSH_PUBLIC_KEY_B64: ""
 
