--- a/tanzu/crs/v1.4.2/v1.4.2.yaml.template
+++ b/tanzu/crs/v1.4.2/v1.4.2.yaml.template
@@ -29,7 +29,7 @@ stringData:
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: tkg-system
+      name: __NAMESPACE_NAME__
       annotations:
         tkg.tanzu.vmware.com/addon-type: addons-management/kapp-controller
     ---
@@ -51,7 +51,7 @@ stringData:
       groupPriorityMinimum: 100
       service:
         name: packaging-api
-        namespace: tkg-system
+        namespace: __NAMESPACE_NAME__
       version: v1alpha1
       versionPriority: 100
     ---
@@ -59,7 +59,7 @@ stringData:
     kind: Service
     metadata:
       name: packaging-api
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         tkg.tanzu.vmware.com/addon-type: addons-management/kapp-controller
     spec:
@@ -1278,7 +1278,7 @@ stringData:
     kind: ConfigMap
     metadata:
       name: kapp-controller-config
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         kapp.k14s.io/change-group: apps.kappctrl.k14s.io/kapp-controller-config
         tkg.tanzu.vmware.com/addon-type: addons-management/kapp-controller
@@ -1297,7 +1297,7 @@ stringData:
         kapp.k14s.io/change-rule: upsert after upserting apps.kappctrl.k14s.io/kapp-controller-config
         tkg.tanzu.vmware.com/addon-type: addons-management/kapp-controller
       name: kapp-controller
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     spec:
       replicas: 1
       revisionHistoryLimit: 0
@@ -1362,7 +1362,7 @@ stringData:
     kind: ServiceAccount
     metadata:
       name: kapp-controller-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         tkg.tanzu.vmware.com/addon-type: addons-management/kapp-controller
     ---
@@ -1485,7 +1485,7 @@ stringData:
     subjects:
     - kind: ServiceAccount
       name: kapp-controller-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     ---
     apiVersion: rbac.authorization.k8s.io/v1
     kind: ClusterRoleBinding
@@ -1500,7 +1500,7 @@ stringData:
     subjects:
     - kind: ServiceAccount
       name: kapp-controller-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     ---
     apiVersion: rbac.authorization.k8s.io/v1
     kind: RoleBinding
@@ -1516,7 +1516,7 @@ stringData:
     subjects:
     - kind: ServiceAccount
       name: kapp-controller-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
 type: addons.cluster.x-k8s.io/resource-set
 ---
 apiVersion: v1
@@ -1531,7 +1531,7 @@ stringData:
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: tkg-system-public
+      name: __NAMESPACE_NAME__-public
       annotations:
         tkg.tanzu.vmware.com/addon-type: metadata/tkg
     ---
@@ -1539,7 +1539,7 @@ stringData:
     kind: Role
     metadata:
       name: tkg-metadata-reader
-      namespace: tkg-system-public
+      namespace: __NAMESPACE_NAME__-public
       annotations:
         tkg.tanzu.vmware.com/addon-type: metadata/tkg
     rules:
@@ -1559,7 +1559,7 @@ stringData:
     kind: RoleBinding
     metadata:
       name: tkg-metadata-reader
-      namespace: tkg-system-public
+      namespace: __NAMESPACE_NAME__-public
       annotations:
         tkg.tanzu.vmware.com/addon-type: metadata/tkg
     roleRef:
@@ -1585,7 +1585,7 @@ stringData:
     kind: ConfigMap
     metadata:
       name: tkg-metadata
-      namespace: tkg-system-public
+      namespace: __NAMESPACE_NAME__-public
       annotations:
         tkg.tanzu.vmware.com/addon-type: metadata/tkg
     data:
@@ -1593,7 +1593,7 @@ stringData:
         cluster:
           name: __CLUSTER_NAME__
           type: management
-          plan: dev
+          plan: prod
           kubernetesProvider: VMware Tanzu Kubernetes Grid
           tkgVersion: v1.4.2
           infrastructure:
@@ -1616,7 +1616,7 @@ stringData:
     kind: ConfigMap
     metadata:
       name: tkg-bom
-      namespace: tkg-system-public
+      namespace: __NAMESPACE_NAME__-public
       annotations:
         tkg.tanzu.vmware.com/addon-type: metadata/tkg
     data:
@@ -2085,7 +2085,7 @@ stringData:
     kind: PackageRepository
     metadata:
       name: tanzu-core
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         tkg.tanzu.vmware.com/addon-type: addons-management/core-package-repo
     spec:
@@ -2166,7 +2166,7 @@ stringData:
     kind: ServiceAccount
     metadata:
       name: tanzu-addons-package-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         ext.packaging.carvel.dev/ytt-data-values-overlays: tanzu-addons-manager-data-values
         tkg.tanzu.vmware.com/addon-type: addons-management/tanzu-addons-manager
@@ -2200,13 +2200,13 @@ stringData:
     subjects:
     - kind: ServiceAccount
       name: tanzu-addons-package-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     ---
     apiVersion: packaging.carvel.dev/v1alpha1
     kind: PackageInstall
     metadata:
       name: tanzu-addons-manager
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         ext.packaging.carvel.dev/ytt-data-values-overlays: tanzu-addons-manager-data-values
         tkg.tanzu.vmware.com/addon-type: addons-management/tanzu-addons-manager
@@ -2224,7 +2224,7 @@ stringData:
     kind: Secret
     metadata:
       name: tanzu-addons-manager-data-values
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       annotations:
         ext.packaging.carvel.dev/ytt-data-values-overlays: tanzu-addons-manager-data-values
         tkg.tanzu.vmware.com/addon-type: addons-management/tanzu-addons-manager
@@ -2235,7 +2235,7 @@ stringData:
         #@overlay/match-child-defaults missing_ok=True
         ---
         tanzuAddonsManager:
-          namespace: tkg-system
+          namespace: __NAMESPACE_NAME__
           createNamespace: false
           deployment:
             hostNetwork: true
@@ -2264,7 +2264,7 @@ stringData:
     #@overlay/match-child-defaults missing_ok=True
     ---
     tanzuAddonsManager:
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
       createNamespace: false
       deployment:
         hostNetwork: true
@@ -2625,6 +2625,44 @@ stringData:
           terminationGracePeriodSeconds: 10
 type: addons.cluster.x-k8s.io/resource-set
 ---
+apiVersion: cluster.x-k8s.io/v1alpha3
+kind: MachineHealthCheck
+metadata:
+  name: __CLUSTER_NAME__
+  namespace: __NAMESPACE_NAME__
+spec:
+  clusterName: __CLUSTER_NAME__
+  nodeStartupTimeout: 20m
+  selector:
+    matchLabels:
+      node-pool: __CLUSTER_NAME__-worker-pool
+  unhealthyConditions:
+  - status: Unknown
+    timeout: 5m
+    type: Ready
+  - status: "False"
+    timeout: 12m
+    type: Ready
+---
+apiVersion: cluster.x-k8s.io/v1alpha3
+kind: MachineHealthCheck
+metadata:
+  name: __CLUSTER_NAME__-control-plane
+  namespace: __NAMESPACE_NAME__
+spec:
+  clusterName: __CLUSTER_NAME__
+  nodeStartupTimeout: 20m
+  selector:
+    matchLabels:
+      cluster.x-k8s.io/control-plane: ""
+  unhealthyConditions:
+  - status: Unknown
+    timeout: 5m
+    type: Ready
+  - status: "False"
+    timeout: 12m
+    type: Ready
+---
 apiVersion: addons.cluster.x-k8s.io/v1alpha3
 kind: ClusterResourceSet
 metadata:
@@ -2922,7 +2960,7 @@ stringData:
       labels:
         app: tanzu-capabilities-manager
       name: tanzu-capabilities-manager-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     ---
     apiVersion: rbac.authorization.k8s.io/v1
     kind: ClusterRole
@@ -2998,7 +3036,7 @@ stringData:
     subjects:
     - kind: ServiceAccount
       name: tanzu-capabilities-manager-sa
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     ---
     apiVersion: apps/v1
     kind: Deployment
@@ -3006,7 +3044,7 @@ stringData:
       labels:
         app: tanzu-capabilities-manager
       name: tanzu-capabilities-controller-manager
-      namespace: tkg-system
+      namespace: __NAMESPACE_NAME__
     spec:
       replicas: 1
       selector:
